--- a/storage-resume.tex
+++ b/storage-resume.tex
@@ -1,4 +1,4 @@
-% Created 2019-07-24 Wed 22:20
+% Created 2020-10-26 Mon 08:25
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -28,7 +28,7 @@
  pdftitle={},
  pdfkeywords={Resume, job, employment, cv},
  pdfsubject={My resume},
- pdfcreator={Emacs 26.2 (Org mode 9.1.9)}, 
+ pdfcreator={Emacs 27.1 (Org mode 9.3)}, 
  pdflang={English}}
 \begin{document}
 
@@ -49,16 +49,17 @@ Moshe Sharet 13, Apt. 5, Petah Tikva, Israel \\[18pt]
 \end{center}
 
 \section*{Technology Skills}
-\label{sec:orge525f21}
+\label{sec:org6fc0f09}
 The company I currently work for: Replix.IO, develops a storage
-product, specifically, a long-distance online zero-RTO replication
-software.  While we plan to expand to object store and, perhaps,
-replication of popular databases, at present, the product works with
-block device level storage.  The product is designed to be used on
-public cloud, however, we also rent some POPs outside of that
-domain.  Given this background, my expertise is in the cloud
-storage, using Linux together with some popular related technologies
-and products s.a. Docker, SPDK, Consul, Prometheus etc.
+product, specifically, a long-distance online zero-RTO (Recovery
+Time Objective) replication software.  While we plan to expand to
+object store and, perhaps, replication of popular databases, at
+present, the product works with block device level storage.  The
+product is designed to be used on public cloud, however, there's a
+plan to extend the service to on-premise installations.  Given this
+background, my expertise is in the cloud storage, using Linux
+together with some popular related technologies and products
+s.a. Docker, SPDK, Consul, Prometheus etc.
 
 The product itself is written in Rust, but automation code is almost
 entirely written in Python.  Automation code needs to interface with
@@ -76,7 +77,7 @@ tools that come with popular storage products like \texttt{pgbench} and
 \texttt{cassandra-stress}.
 
 \subsection*{Previous experience}
-\label{sec:org419ecbe}
+\label{sec:org4954efe}
 Before working for Replix.IO, I worked with another storage
 product: Elastifile distributed file system (created by
 Elastifile).  I worked on a large infrastructure project mostly
@@ -89,17 +90,17 @@ Another part of this project was about integration with VMWare's
 VCenter, which was considered the primary target for the product.
 
 \subsection*{Non-work-related (programming) skills}
-\label{sec:org3315baf}
+\label{sec:orgf41e480}
 I like Lisp and Prolog.  I have decent knowledge of Common Lisp.
 I'm very enthusiastic about Mercury.  I know Emacs Lisp fairly
 well.  I help my wife with statistical programming in Python using
 Pandas, Pill and other popular data-science software.
 
 \section*{Work History}
-\label{sec:org2098b9e}
+\label{sec:orgafc8592}
 
 \subsection*{Replix.IO}
-\label{sec:orgcbd246b}
+\label{sec:orgaaa5cfc}
 \begin{description}
 \item[{Programmer}] August 2018--present
 \begin{itemize}
@@ -109,7 +110,7 @@ automating development process.
 \end{description}
 
 \subsection*{NEX Traiana}
-\label{sec:orgd952e8b}
+\label{sec:org122a562}
 \begin{description}
 \item[{Programmer}] August 2017--August 2018
 \begin{itemize}
@@ -119,7 +120,7 @@ and testing.
 \end{description}
 
 \subsection*{AllAspect}
-\label{sec:orgc9d5d73}
+\label{sec:orgc5d0d6b}
 \begin{description}
 \item[{Programmer}] April 2017--August 2017
 \begin{itemize}
@@ -130,7 +131,7 @@ statistical data.
 \end{description}
 
 \subsection*{Elastifile}
-\label{sec:orgb410108}
+\label{sec:orgcfe466a}
 \begin{description}
 \item[{Programmer}] December 2015--April 2017
 \begin{itemize}
@@ -143,7 +144,7 @@ interface with system code.
 \end{description}
 
 \subsection*{PowToon Ltd.}
-\label{sec:org245ffde}
+\label{sec:orgaa5b880}
 \begin{description}
 \item[{Programmer}] January 2014--May 2015
 \begin{itemize}
@@ -156,7 +157,7 @@ setup.
 \end{description}
 
 \subsection*{TransGaming Inc.}
-\label{sec:org845d466}
+\label{sec:orgd774a53}
 \begin{description}
 \item[{Programmer}] April 2013--2013
 \begin{itemize}
@@ -170,7 +171,7 @@ aggregation using Google Analytics.
 \end{description}
 
 \subsection*{Rounds}
-\label{sec:orgd2277e7}
+\label{sec:org8e60932}
 \begin{description}
 \item[{Programmer}] December 2010--August 2011
 \begin{itemize}
@@ -183,12 +184,12 @@ to advertise the company's product.
 \end{description}
 
 \section*{University Level Courses}
-\label{sec:orgd4266a3}
+\label{sec:org5de856e}
 Data Scientist's Toolbox (statistics in R), Statistics, Data
 Analysis, Machine Learning, Artificial Intelligence.
 
 \section*{Volunteering And Community Work}
-\label{sec:orgd192044}
+\label{sec:org609ba34}
 SCons project, ActionScript plugin.  (SCons is an extensible build system
 written in Python).
 
@@ -199,7 +200,7 @@ this one: \url{http://kb2.adobe.com/community/publishing/526/cpsid\_52670.html}
 I'm an active member of Emacs Q/A site from the StackExchange family.
 
 \section*{Examples Of My Work}
-\label{sec:org92831ab}
+\label{sec:org13b7d06}
 My Github profile:
 \begin{itemize}
 \item \url{https://github.com/wvxvw/}.
@@ -207,15 +208,15 @@ My Github profile:
 \end{itemize}
 
 \section*{Languages}
-\label{sec:org8348956}
+\label{sec:org1f05802}
 Fluent in English, Hebrew, Russian.
 
 \section*{Hobbies}
-\label{sec:orgd9edeaf}
+\label{sec:org3f4b02a}
 NLP, Computational linguistics, Moral philosophy, General AI, Graphs.
 
 \section*{Citizenship and Mobility}
-\label{sec:org805bc4c}
+\label{sec:orgd654cb1}
 Citizen of Israel and Ukraine.  USA citizenship pending.  Willing
 to relocate.
 \end{document}
